@@ -1,2 +1,2 @@
-reposurgeon: no support for < redirection
-reposurgeon: script abort on line 3
+testing
+success
